# ai-treasure-digger

./: .gitignore  CLAUDE.md  README.md  generate-icons.sh  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: architecture-v2.md
docs/superpowers/specs/: 2026-05-09-ai-service-detector-design.md
icons/: icon.icns
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  logger.rs  main.rs  models.rs
src-tauri/src/autostart/: registry.rs  task_scheduler.rs
src-tauri/src/operator/: autostart_mgr.rs  cleanup.rs  mod.rs  stop.rs
src-tauri/src/safety/: backup.rs  guard.rs  mod.rs  wsl_confirm.rs
src-tauri/src/scanner/: docker.rs  mod.rs  port.rs  process.rs  resource.rs  wsl.rs
src/components/dashboard/: Dashboard.tsx
src/components/layout/: Sidebar.tsx
src/components/services/: CleanupModal.tsx  Services.tsx
src/components/settings/: Settings.tsx
src/components/ui/: Toast.tsx
src/hooks/: useToast.ts
src/i18n/: en.ts  index.ts  locale.ts  zh-CN.ts
src/lib/: api.ts  types.ts
src/styles/: globals.css
